--- a/appstate.json
+++ b/appstate.json
@@ -1,57 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100047251667599%22%3A%22f4hvGopA%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%2261561324076916%22%3A%226NlkW7dV%22%2C%22100095342989176%22%3A%22uInCeKej%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.995Z"
-    },
-    {
-        "key": "datr",
-        "value": "Eq5zZoEx4v67D-XSPoiUosxu",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.995Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "sb",
-        "value": "Eq5zZiZKFZjwOAwadimHF_sx",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.995Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
-        "key": "ps_n",
-        "value": "1",
+        "key": "datr",
+        "value": "KzuKZqw26dOgjgoJfnm_OFub",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.995Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.995Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B677x360x1.6187498569488525",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.995Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "locale",
@@ -59,61 +32,97 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.995Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.7737884521484375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "wd",
-        "value": "445x836",
+        "value": "429x843",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.996Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "fr",
-        "value": "0SfMMWk7rwjLiS5CL.AWXRi2n6EnMtEhWU5_4PYDCGv90.Bmc64S..AAA.0.0.BmiLE5.AWVWanu7j8o",
+        "value": "0jbIGUnZSluXOYsdr.AWV5if3DEyef0oGzD4kyVKB3Y4g.Bmijsr..AAA.0.0.Bmi8fg.AWW35CHYx6s",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.996Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "c_user",
-        "value": "100047251667599",
+        "value": "61561324076916",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.996Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "xs",
-        "value": "7%3AdoxBVHOxX60g9w%3A2%3A1720234297%3A-1%3A5903",
+        "value": "9%3AqHKinEWpJYncFg%3A2%3A1720436704%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.996Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2552%3Btimestamp%3A1720286149",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.996Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     },
     {
         "key": "fbl_st",
-        "value": "101336634%3BT%3A28671435",
+        "value": "101231996%3BT%3A28674253",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-06T17:16:11.996Z",
-        "lastAccessed": "2024-07-06T17:16:11.996Z"
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2554%3Btimestamp%3A1720455185",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T16:13:17.632Z",
+        "lastAccessed": "2024-07-08T16:13:17.632Z"
     }
 ]
