--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%2261561324076916%22%3A%226NlkW7dV%22%2C%22100095342989176%22%3A%22uInCeKej%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%2261561324076916%22%3A%226NlkW7dV%22%2C%22100095342989176%22%3A%22BBFR63M3%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "vpd",
@@ -68,8 +68,53 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.518298864364624",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
+    },
+    {
+        "key": "fr",
+        "value": "0jbIGUnZSluXOYsdr.AWW15cY8sM4_tCwZfgEl6WK1nrg.Bmijsr..AAA.0.0.BmjHy2.AWUOyokVkGg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100095342989176",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
+    },
+    {
+        "key": "xs",
+        "value": "11%3AJ2aVdXRg9QnDnQ%3A2%3A1720482999%3A-1%3A14443",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "100095342989176",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "wd",
@@ -77,52 +122,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
-    },
-    {
-        "key": "fr",
-        "value": "0jbIGUnZSluXOYsdr.AWV5if3DEyef0oGzD4kyVKB3Y4g.Bmijsr..AAA.0.0.Bmi8fg.AWW35CHYx6s",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61561324076916",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
-    },
-    {
-        "key": "xs",
-        "value": "9%3AqHKinEWpJYncFg%3A2%3A1720436704%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "fbl_st",
-        "value": "101031723%3BT%3A28674710",
+        "value": "100727393%3BT%3A28674716",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2555%3Btimestamp%3A1720482605",
+        "value": "v2%3Bclient_version%3A2555%3Btimestamp%3A1720483005",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-08T23:50:14.920Z",
-        "lastAccessed": "2024-07-08T23:50:14.920Z"
+        "creation": "2024-07-08T23:56:53.966Z",
+        "lastAccessed": "2024-07-08T23:56:53.966Z"
     }
 ]
