--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "〖 # 〗 ➺ 🌸𒁍आदि बाबू",
+    "BOTNAME": "〖 # 〗 ➺ 🌸🥀ɢ❍ɭ ɢʌʌ𝐩🅘🕊️",
     "PREFIX": "#",
     "OTHERBOT": [
         ""
