--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "〖 # 〗 ➺ 🌸🥀ɢ❍ɭ ɢʌʌ𝐩🅘🕊️",
-    "PREFIX": "#",
+    "PREFIX": ".",
     "OTHERBOT": [
         ""
     ],
